--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ requests = "2.25.0"
 pytest = "^6.2.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.2"
+selenium = "^3.141.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
