--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytest = "^6.2.1"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
 selenium = "^3.141.0"
+gunicorn = "^20.0.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
