Added changes to implement stretch goals for module 5

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,13 @@
 ##Environemt configuration
 .env
+.env.test
 .env.template
 .gitignore
 .git
 .venv
 
 chromedriver.exe
+Backup - Dockerfile
 
 ##Vagrant configuration
 .vagrant
