--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
+services:
+- docker
+
+# before_install:
+# - docker build --target development --tag todo-app:dev .
+# - docker run --env-file ./.env -p 5000:5000 --mount type=bind,source="$(pwd)"/todo_app,target=/app/todo_app/ todo-app:dev
+# - docker ps -a 
+
 script:
-- echo "hello world"
+- docker build --target development --tag todo-app:dev .
