--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ services:
 # - docker ps -a 
 
 script:
-- docker build --target development --tag todo-app:dev .
+- docker build --target test --tag todo-app:test .
+-docker run --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests/test_view_model.py
