--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ services:
 - docker
 script:
 - docker build --target test --tag todo-app:test .
+- docker run --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests/test_view_model.py
+- docker run --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests/test_endpoints.py
 - docker run  -eT_KEY=$T_KEY -eT_TOKEN=$T_TOKEN --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests_e2e
 env:
   global:
