Formatted yml file for creating different stages of the build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,35 @@
 services:
 - docker
-before_script:
-- docker login -u $DOCKER_USERNAME -p $DOCKER_CODE
 
-script:
-#- docker build --target test --tag todo-app:test .
-#- docker run --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests/test_view_model.py
-#- docker run --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests/test_endpoints.py
-#- docker run  -eT_KEY=$T_KEY -eT_TOKEN=$T_TOKEN --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests_e2e
+jobs:
+  # configuration setup stage
+  - stage: Configuration setup
+    script:
+    - docker login -u $DOCKER_USERNAME -p $DOCKER_CODE
+    - docker login --username=virendrasankpal@yahoo.com --password=$(heroku auth:token) registry.heroku.com
 
-- docker build --target production --tag virendras19/todo-app:latest --tag virendras19/todo_app:$TRAVIS_COMMIT .
-- docker image push virendras19/todo-app:latest
-- docker login --username=virendrasankpal@yahoo.com --password=$(heroku auth:token) registry.heroku.com
-- docker pull virendras19/todo-app
-- docker tag virendras19/todo-app registry.heroku.com/virendra-todo-app/web
-- docker push registry.heroku.com/virendra-todo-app/web
-- heroku container:release web --app virendra-todo-app
-- heroku open  --app virendra-todo-app
+  #test stage
+  - stage: test
+    script:
+    - docker build --target test --tag todo-app:test .
+    - docker run --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests/test_view_model.py
+    - docker run --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests/test_endpoints.py
+    - docker run  -eT_KEY=$T_KEY -eT_TOKEN=$T_TOKEN --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests_e2e
+
+  #Deployment prep stage
+  - stage: deployment prep phase
+    script:
+    - docker build --target production --tag virendras19/todo-app:latest --tag virendras19/todo_app:$TRAVIS_COMMIT .
+    - docker image push virendras19/todo-app:latest
+    - docker pull virendras19/todo-app
+
+  #Deploy stage
+  - stage: deploy
+    script:
+    - docker tag virendras19/todo-app registry.heroku.com/virendra-todo-app/web
+    - docker push registry.heroku.com/virendra-todo-app/web
+    - heroku container:release web --app virendra-todo-app
+    - heroku open  --app virendra-todo-app
 
 env:
   global:
