--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ jobs:
     script:
     - docker login -u $DOCKER_USERNAME -p $DOCKER_CODE
     - docker login --username=virendrasankpal@yahoo.com --password=$(heroku auth:token) registry.heroku.com
+    - heroku container:login
 
   #test stage
   - stage: test
