added docker login to deployment prep phase to resolve push error.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ jobs:
     - docker build --target production --tag virendras19/todo-app:latest --tag virendras19/todo_app:$TRAVIS_COMMIT .
     - docker ps -a 
     - docker image list
+    - docker login -u $DOCKER_USERNAME -p $DOCKER_CODE
     - docker image push virendras19/todo-app:latest
     - docker pull virendras19/todo-app
 
