--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ jobs:
     - docker run --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests/test_endpoints.py
     - docker run  -eT_KEY=$T_KEY -eT_TOKEN=$T_TOKEN --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests_e2e
 
-  #Deployment prep stage
-  - stage: deployment prep phase
+  #Deployment stage
+  - stage: Deploy
     script:
     - docker build --target production --tag virendras19/todo-app:latest --tag virendras19/todo_app:$TRAVIS_COMMIT .
     - docker ps -a 
@@ -26,10 +26,6 @@ jobs:
     - docker login -u $DOCKER_USERNAME -p $DOCKER_CODE
     - docker image push virendras19/todo-app:latest
     - docker pull virendras19/todo-app
-
-  #Deploy stage
-  - stage: deploy
-    script:
     - docker tag virendras19/todo-app registry.heroku.com/virendra-todo-app/web
     - docker push registry.heroku.com/virendra-todo-app/web
     - heroku container:release web --app virendra-todo-app
