--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,14 @@ jobs:
     - heroku container:login
     script:
     - docker build --target production --tag virendras19/todo-app:latest --tag virendras19/todo_app:$TRAVIS_COMMIT .
-    - docker ps -a
-    - docker image list
     - docker image push virendras19/todo-app:latest
     - docker pull virendras19/todo-app
     - docker tag virendras19/todo-app registry.heroku.com/virendra-todo-app/web
     - docker push registry.heroku.com/virendra-todo-app/web
     - heroku container:release web --app virendra-todo-app
     - heroku open  --app virendra-todo-app
+    on:
+      branch: module-eight
  
 env:
   global:
