--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,23 @@ jobs:
  include:
   - stage: Build docker Image
     script: 
-    - docker build --target test --tag todo-app:test .
+    - docker build --target test --tag virendras19/todo-app:test .
     - docker images
     - docker login -u $DOCKER_USERNAME -p $DOCKER_CODE
     - docker image push virendras19/todo-app:test
 
   - stage: Test
-    before_script: docker pull virendras19/todo-app
-    script: docker run --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests/test_view_model.py
+    before_script: docker pull virendras19/todo-app:test
+    script: docker run --mount type=bind,source="$(pwd)"/,target=/app/ virendras19/todo-app:test tests/test_view_model.py
     name: "Unit Test"
 
    
-  - before_script: docker pull virendras19/todo-app 
-    script: docker run --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests/test_endpoints.py
+  - before_script: docker pull virendras19/todo-app:test 
+    script: docker run --mount type=bind,source="$(pwd)"/,target=/app/ virendras19/todo-app:test tests/test_endpoints.py
     name: "Endpoint Test"
     
-  - before_script: docker pull virendras19/todo-app 
-    script: docker run  -eT_KEY=$T_KEY -eT_TOKEN=$T_TOKEN --mount type=bind,source="$(pwd)"/,target=/app/ todo-app:test tests_e2e
+  - before_script: docker pull virendras19/todo-app:test 
+    script: docker run  -eT_KEY=$T_KEY -eT_TOKEN=$T_TOKEN --mount type=bind,source="$(pwd)"/,target=/app/ virendras19/todo-app:test tests_e2e
     name: "End to End Tests"
 
   - stage: Deploy
