--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pytest = "^6.2.1"
 gunicorn = "^20.0.4"
 webdriver-manager = "^3.4.2"
 watchdog = {extras = ["watchmedo"], version = "^2.1.2"}
+pymongo = {extras = ["srv"], version = "^3.12.0"}
 
 
 [tool.poetry.dev-dependencies]
